--- a/src/css/ui/media-panel/panel.less
+++ b/src/css/ui/media-panel/panel.less
@@ -1,6 +1,10 @@
 @import "../../vars/all";
 @import "./related";
 
+#audio-player { 
+	width:100%; clear:both; float:left; margin:0;
+}
+
 .mixin-media-panel () {
     background:@theme-background;
     .flexbox(@dir:column;@justify:flex-start);
