--- a/src/css/ui/playlist/pane.less
+++ b/src/css/ui/playlist/pane.less
@@ -1,6 +1,14 @@
 @import "../../vars/all";
 @import "../kit/search-input";
 
+#challengeSelector {
+        width:100%;
+        margin-bottom:10px;
+        height:2em;
+        font-weight:bolder;
+        background:#F2F2F2;
+}
+
 .mixin-playlist-pane () {
     @border-color:@purple-light;
     background:@theme-background;
