--- a/src/css/ui/kit/search-input.less
+++ b/src/css/ui/kit/search-input.less
@@ -13,7 +13,7 @@
         .flexbox(@align:center);
     }
 
-    .input {
+    .input, .select {
         background:@white;
         padding-left:@column-pad;
         border:none;
