--- a/src/css/ui/playlist/pane.less
+++ b/src/css/ui/playlist/pane.less
@@ -9,6 +9,9 @@
         background:#F2F2F2;
 }
 
+.innerPane { position:relative;   height: 100%;
+  overflow: scroll; }
+
 .mixin-playlist-pane () {
     @border-color:@purple-light;
     background:@theme-background;
