challengeBlock cleaned up

--- a/src/css/ui/media-panel/panel.less
+++ b/src/css/ui/media-panel/panel.less
@@ -1,7 +1,7 @@
 @import "../../vars/all";
 @import "./related";
 
-#audio-player { 
+#audio-player, #audioPlayer { 
 	width:100%; clear:both; float:left; margin:0;
 }
 
